# matchup_scheduler

./: README.md  demo.py  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  kabbes_matchup_scheduler.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/kabbes_matchup_scheduler/: team.html  types.html
docs/_sources/: index.rst.txt  kabbes_matchup_scheduler.rst.txt  modules.rst.txt
src/kabbes_matchup_scheduler/: BasePlural.py  BaseSingle.py  CONFIG.json  Client.py  Game.py  Games.py  Matchup.py  Matchups.py  Round.py  Rounds.py  Scheduler.py  Team.py  Teams.py  Venue.py  Venues.py  __init__.py  __main__.py  scheduler.py  scheduler_temp.py  team.py  types.py
