[metadata]
name = kabbes_matchup_scheduler
version = 0.0.0
author = James Kabbes
author_email = james.kabbes@gmail.com
description = repo for randomly scheduling head to head schedules 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/kabbes_matchup_scheduler
project_urls =
    GitHub = https://github.com/jameskabbes/matchup_scheduler
    Documentation = https://jameskabbes.github.io/matchup_scheduler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src